[package]
authors = ["Mark LeMoine <linclelinkpart5@gmail.com>"]
description = "A minimalistic, set-and-forget music player intended for playing music at dance socials."
edition = "2021"
name = "gostoso"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
